2004-10-20  Vinay M R  <vinay.mandyakoppal@wipro.com>

	* libgnome/gnome-util.h: Fix the problem of
	Launcher unusable as root in solaris.
	Fixes bug #155913.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-gconf.c: Fix build with newer GCC. Patch
	from Ryan Lortie. Closes bug #169857.

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_interface.schemas.in: added a gconf key to 
	configure the gtk-menu-bar-accelerator.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in:
	Patch from Shaun McCance to add schemas for document
	font setting. Closes bug #160453

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Fix build on ia64. Patch from Sebastien
	Bacher. Closes bug #148996.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Use
	the correct key name for both-horiz. Patch from
	Christian Neumair. Closes bug #145004.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c: Add #include <strings.h>
	* monikers/bonobo-config-bag.c: Make a function static

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c:
	Pass the GNOME_PARAM_HUMAN_READABLE_NAME property
	to g_set_application_name(). Fixes bug #109238.
	Patch from Muktha Narayan <muktha narayan at wipro com>

2005-04-29  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-util.c (gnome_win32_locale_filename_from_utf8):
	New function. Lifted from HEAD GLib. If GLib 2.8 is released
	before libgnome gets more widely deployed on Windows, this can be
	dropped and use g_win32_locale_filename_from_utf8() directly
	instead.

	* libgnome/gnome-util.h: Declare it. On GLib 2.7 and later,
	just redirect to g_win32_locale_filename_from_utf8().

2005-04-18  Tor Lillqvist  <tml@novell.com>

	* libgnome/Makefile.am: Remove unused LIBGNOME_BINDIR.

	Rework the Win32 run-time path lookup system once more. Use